[KMS] Add CashItem_label.11

--- a/CharaSimResource.csproj
+++ b/CharaSimResource.csproj
@@ -1135,6 +1135,7 @@
     <None Include="Resources\CashShop.img.CashItem_label.8.png" />
     <None Include="Resources\CashShop.img.CashItem_label.9.png" />
     <None Include="Resources\CashShop.img.CashItem_label.10.png" />
+    <None Include="Resources\CashShop.img.CashItem_label.11.png" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\CSDiscount.0.png" />
